welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	a+10 <= b || a+10 <= c || b=10<=c
                               ^